Adicionamento da tela cliente BD

--- a/PojetoNovoLRAleatorio/Views/Cliente/Cliente.cshtml
+++ b/PojetoNovoLRAleatorio/Views/Cliente/Cliente.cshtml
@@ -4,7 +4,7 @@
 }
 
 <p>
-    <a asp-controller="Cliente" asp-action="Cliente">Cadastra Cliente</a>
+    <a asp-controller="Cliente" asp-action="CadCliente">Cadastra Cliente</a>
     
   
 </p>
